<resources>
    <string name="app_name">Glisten &amp;            Glow Gifts</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Glisten &amp; Glow Gifts</string>
    <string name="nav_header_subtitle">MA177@myscc.ca@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_favourites">Favourites</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_quiz">Quiz</string>
    <string name="menu_faq">FAQ</string>
    <string name="menu_help">Help</string>
    <string name="menu_credits">Credits</string>
    <string name="glisten"><![CDATA[Glisten]]></string>
    <string name="and"><![CDATA[&]]></string>
    <string name="glow">Glow</string>
    <string name="gifts">Gifts</string>
    <string name="discover_your_perfect_gift">Discover your perfect gift</string>
    <string name="search">Didn\'t find what are you looking for?</string>
    <string name="searchImage">search the map</string>
    <string name="find_a_store">Find a nearby store</string>
    <string name="call_us">Give us a call</string>
    <string name="question">Have a question about your order?</string>
    <string name="order">Have a question about your order?</string>
    <string name="visit_website" />
    <string name="visitWebsite">Visit my website</string>
    <string name="callUs">Call Us</string>
    <string name="emailUs">Email us</string>
    <string name="findAstore">Find a nearby store</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Switch Preferences -->
    <string name="view_mode_list">List View Mode</string>
    <string name="view_mode_grid">Grid View Mode</string>

    <!-- Checkout activity -->
    <string name="title_activity_checkout">CheckoutActivity</string>
    <string name="checkout_item_description">Description</string>
    <string name="googlepay_status_unavailable" translatable="false">Unfortunately, Google Pay is
        not available on this phone.
    </string>
    <string name="payments_show_name" translatable="false">Successfully received payment data for
        %s!
    </string>


</resources>