<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_storefront_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_round_category_24"
            android:title="@string/menu_categories" />
        
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_round_shopping_cart_24"
            android:title="@string/menu_cart" />

        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_round_live_help_24"
            android:title="@string/menu_help" />
        <item
            android:id="@+id/nav_credits"
            android:icon="@drawable/ic_baseline_camera_roll_24"
            android:title="@string/menu_credits" />
    </group>
</menu>