<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:orientation="vertical"
    tools:context=".fragments.HelpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/findImg_btn"
            android:layout_width="177dp"
            android:layout_height="132dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_corners2"
            android:contentDescription="@string/find_a_store"
            android:scaleType="fitXY"
            android:src="@drawable/search" />

        <LinearLayout
            android:layout_width="249dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/allan"
                android:text="@string/search"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/allan"
                android:text="@string/find_a_store"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="242dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/allan"
                android:text="@string/order"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/allan"
                android:text="Email us"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/emailImg_btn"
            android:layout_width="wrap_content"
            android:layout_height="132dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_corners2"
            android:contentDescription="@string/emailUs"
            android:scaleType="fitXY"
            android:src="@drawable/email" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/callUsImg_btn"
            android:layout_width="156dp"
            android:layout_height="132dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_corners2"
            android:contentDescription="@string/call_us"
            android:scaleType="fitXY"
            android:src="@drawable/call" />

        <LinearLayout
            android:layout_width="255dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/allan"
                android:text="anything urgent?"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/allan"
                android:text="@string/call_us"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/allan"
                android:text="Enjoyed using my app? "
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/allan"
                android:text="Visit my website"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/mySiteImg_btn"
            android:layout_width="match_parent"
            android:layout_height="132dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/visitWebsite"
            android:scaleType="center"
            android:src="@drawable/visit_website" />

    </LinearLayout>


</LinearLayout>